[package]
name = "robby"
version = "0.1.0"
authors = ["Kyle Nusbaum <knusbaum@sdf.org>"]
edition = "2018"

[dependencies]
tokio="0.1"
tokio-core="0.1"
knusbaum_consul = "0.2"
futures = "0.1"
bytes = "0.4"
regex = "1.1"
rand = "0.6"
lazy_static = "1.3"
config = "0.9"

[dev-dependencies]
reqwest="0.9"
rouille="3.0"

[profile.release]
lto = true
#panic = 'abort'
